# stock

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  TECH_STACK.md  cli.py  pyproject.toml  start.sh
agent/: agent.py  prompts.py  tool_executor.py  tools.py  zoom_client.py
analysis/: correlator.py  embedder.py
api/: main.py  models.py  session.py
api/routes/: chat.py  data.py  overview.py  plans.py  sessions.py
config/: settings.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: Charts.vue  ChatPanel.vue  History.vue  HistoryDropdown.vue  InputBox.vue  MessageBubble.vue  NavTabs.vue  OverviewCard.vue  PlanForm.vue  Sidebar.vue
frontend/src/composables/: useSSE.test.ts  useSSE.ts
frontend/src/lib/: sse.test.ts  sse.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.test.ts  chat.ts  overview.ts  (+7 more)
ingestion/fundamentals/: finnhub_fundamentals.py
ingestion/macro/: fred_client.py
ingestion/news/: aggregator.py  alpha_vantage_news.py  financial_juice.py  finnhub_news.py
ingestion/prices/: options_sentiment.py  options_structure.py  yfinance_client.py
ingestion/sentiment/: stocktwits_client.py
scheduler/: jobs.py
storage/: database.py  models.py  repository.py  vector_store.py
tests/: test_chat_sessions.py  test_frontend_serving.py  test_fundamentals.py  test_options_structure.py  test_overview.py  test_plans.py  test_ticker_registration.py
(+3 files in other folders)
