[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "sqlalchemy>=2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "apscheduler>=3.10",
    "pandas>=2.0",
    "openai>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
